[project]
name = "koi-mira-prototype"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "koi-net-coordinator-node>=0.1.0",
    "koi-net-discourse-graph-node",
    "koi-net-semble-node",
]

[tool.uv.sources]
koi-net-discourse-graph-node = { workspace = true }
koi-net-semble-node = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/koi-net-semble-node",
    "packages/koi-net-discourse-graph-node",
    "packages/mira-extras",
]
